# Havano-Hotel-Management

./: README.md  pyproject.toml
havano_hotel_management/: api.py  hooks.py  modules.txt
havano_hotel_management/fixtures/: client_script.json  custom_field.json
havano_hotel_management/havano_hotel_management_system/dashboard_chart/booking/: booking.json
havano_hotel_management/havano_hotel_management_system/doctype/amenity/: amenity.json  amenity.py
havano_hotel_management/havano_hotel_management_system/doctype/booking/: booking.js  booking.json  booking.py  test_booking.py
havano_hotel_management/havano_hotel_management_system/doctype/business_source/: business_source.js  business_source.json  business_source.py  test_business_source.py
havano_hotel_management/havano_hotel_management_system/doctype/check_in/: check_in.js  check_in.json  check_in.py  check_in_list.js  test_check_in.py
havano_hotel_management/havano_hotel_management_system/doctype/check_out/: check_out.js  check_out.json  check_out.py  check_out_list.js  test_check_out.py
havano_hotel_management/havano_hotel_management_system/doctype/city/: city.js  city.json  city.py  test_city.py
havano_hotel_management/havano_hotel_management_system/doctype/desk_folio/: desk_folio.js  desk_folio.json  desk_folio.py  test_desk_folio.py
havano_hotel_management/havano_hotel_management_system/doctype/hotel_guest/: hotel_guest.js  hotel_guest.json  hotel_guest.py  test_hotel_guest.py
havano_hotel_management/public/css/: app.css
(+94 files in other folders)
